--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,4 +15,6 @@
   </div>
 
   <%= link_to "New product", new_product_path, class: "new-product-link" %>
+  <%= button_to 'Logout', logout_path, method: :delete, class: "your-logout-button-class" %>
+
 </div>
